--- a/src/styles.css
+++ b/src/styles.css
@@ -2,8 +2,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 /** {
-  overflow-y: hidden;
-  overflow-x: hidden; 
+  /*overflow-y: hidden;
+  overflow-x: hidden; */
+  /*border: 1px solid yellow;
 }*/
 
 html,
